--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@font-face {
+  font-family: 'IRANSansX';
+  src: url('/src/assets/fonts/Iranian\ Sans.ttf') format('ttf');
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "IRANSansX";
 }
+.ant-typography {
+    font-family: "IRANSansX";
 
+}
+.ant-layout .ant-layout-sider{
+  background: #f8f9fa;
+
+}
+.ant-layout{
+  background: #f8f9fa;
+}
+.ant-layout-header {
+  /* padding-left: 7rem; */
+  padding-top: 0.5rem;
+  direction: ltr;
+}
+.ant-menu-light.ant-menu-root.ant-menu-inline{
+
+  border: none;
+}
+.ant-menu-light.ant-menu-root.ant-menu-vertical{
+  border:0
+}
+.ant-menu{ 
+  background: #f8f9fa;
+
+}
 body {
   font-family: "IRANSansX", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
