--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,22 @@
 @tailwind utilities;
 @font-face {
   font-family: 'IRANSansX';
-  src: url('/src/assets/fonts/Iranian\ Sans.ttf') format('ttf');
+  src: url('/src/assets/fonts/IRANSansX-Regular.ttf') format('ttf');
+}
+body {
+  font-family: "IRANSansX", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "IRANSansX";
+  /* font-family: "IRANSansX !important"; */
 }
-.ant-typography {
-    font-family: "IRANSansX";
-
+:global(.ant-menu-item-selected) {
+  background: #ff0000 !important; /* Change to your desired color */
 }
 .ant-layout .ant-layout-sider{
   background: #f8f9fa;
@@ -23,7 +28,7 @@
   background: #f8f9fa;
 }
 .ant-layout-header {
-  /* padding-left: 7rem; */
+  padding-left: 0rem;
   padding-top: 0.5rem;
   direction: ltr;
 }
@@ -37,12 +42,6 @@
 .ant-menu{ 
   background: #f8f9fa;
 
-}
-body {
-  font-family: "IRANSansX", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
