--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@font-face {
+/* @font-face {
   font-family: 'IRANSansX';
   src: url('/src/assets/fonts/IRANSansX-Regular.ttf') format('ttf');
-}
+} */
 body {
   font-family: "IRANSansX", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
