--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.ant-spin-dot-item {
+  background-color: white !important;
+}
