fix menu bug, add the answer page

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,6 @@ code {
   direction: ltr;
   justify-content: center;
   }
+  .ant-table-cell-row-hover {
+    background-color: transparent !important;
+  }
