--- a/src/components/Chat/ChatBubble.css
+++ b/src/components/Chat/ChatBubble.css
@@ -1,23 +1,14 @@
 @use postcss-nested;
 
 :root {
-  --send-bg: #0B93F6;
-  --send-color: white;
+  --send-bg: #DAE2DD;
+  --send-color: black;
   --receive-bg: #E5E5EA;
   --receive-text: black;
-  --page-background: white;
+  --page-background: #F8F9FA;
 }
 
-/* body {
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
-	font-size: 20px;
-	font-weight: normal;
-  max-width: 450px;
-	margin: 50px auto;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--page-background);
-} */
+
 
 p {
   max-width: 255px;
@@ -39,7 +30,7 @@ p {
 .send {
 	color: var(--send-color); 
 	background: var(--send-bg);
-	align-self: flex-end;
+	align-self: flex-start;
 		
 	&:before {
 		right: -7px;
@@ -53,24 +44,5 @@ p {
     width: 26px;
     background-color: var(--page-background);
 		border-bottom-left-radius: 10px;
-	}
-}
-.receive {
-	background: var(--receive-bg);
-	color: black;
-  align-self: flex-start;
-		
-	&:before {
-		left: -7px;
-    width: 20px;
-    background-color: var(--receive-bg);
-		border-bottom-right-radius: 16px 14px;
-	}
-
-	&:after {
-		left: -26px;
-    width: 26px;
-    background-color: var(--page-background);
-		border-bottom-right-radius: 10px;
 	}
 }
