updating login form component styles

--- a/src/components/Public-layouts/Styles/LoginForm.css
+++ b/src/components/Public-layouts/Styles/LoginForm.css
@@ -2,3 +2,12 @@
 .facebook-btn.ant-btn span:nth-child(2) {
   margin-top: 5px;
 }
+
+.email-form-item.ant-form-item .ant-form-item-row .ant-form-item-label,
+.password-form-item.ant-form-item .ant-form-item-row .ant-form-item-label {
+  width: 70px;
+}
+
+.email-form-item.ant-form-item .ant-form-item-row .ant-form-item-label {
+  text-align: right;
+}
